using java 8 Stream API